-fixed z-index

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,6 +1,7 @@
-// * {
-//   margin: 0;
-// }
+* {
+  margin: 0;
+}
+
 @keyframes bgcolor {
   0% {
     background-color: #f8fafc;
@@ -23,11 +24,6 @@
 }
 main {
   margin-top: 80px;
-}
-html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
 }
 body {
   margin: 0;
@@ -203,11 +199,7 @@ textarea {
   -webkit-appearance: button;
   font: inherit;
 }
-html {
-  font: 112.5%/1.45em georgia, serif;
-  box-sizing: border-box;
-  overflow-y: scroll;
-}
+
 * {
   box-sizing: inherit;
 }
@@ -811,6 +803,7 @@ p {
 .ul-list {
   display: inline-flex;
   margin: 0;
+  margin-right: 5px;
 }
 .button-links-nav {
   display: inline-flex;
@@ -818,12 +811,21 @@ p {
   text-decoration: none;
   color: white;
   cursor: pointer;
-  margin-right: 5px;
   border: none;
   margin-top: 10px;
 }
 .button-links-nav:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 800px) {
+  .button-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    margin: 6px;
+  }
 }
 
 .navbar {
@@ -832,12 +834,13 @@ p {
   justify-content: flex-end;
   align-items: center;
   background: black;
-  position: relative;
+  position: absolute;
   top: 0;
   z-index: 10;
   position: fixed;
   width: 100%;
   height: 6%;
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 @media (max-width: 800px) {
@@ -845,6 +848,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 10%;
   }
 }
 
@@ -859,11 +863,11 @@ p {
   color: white;
   padding: 12px 1px 1px 10px;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 22px;
   border-radius: 9px;
   outline: none;
   position: relative;
-  margin-right: 80px;
+  margin-right: 90px;
   margin-bottom: 14px;
 }
 
@@ -878,6 +882,7 @@ p {
   flex-direction: column;
   position: fixed;
   background-color: black;
+  width: 100%;
   text-decoration: none;
   color: white;
   cursor: pointer;
@@ -1471,11 +1476,17 @@ p {
 
 .myfooter {
   display: flex;
+  flex: 1 0 auto;
+  flex-shrink: 0;
   justify-content: center;
   align-items: flex-end;
   height: 100px;
+  width: 100%;
   background-color: black;
   color: white;
+  // bottom: 0;
+  // left: 0;
+  //margin-top: -1px;
 }
 
 @media (max-width: 600px) {
